--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,12 +19,17 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="eu.boss.secret_santa_draw.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="eu.boss.secret_santa_draw.AllContactsListActivity"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
